[package]
name = "big_int"
version = "0.1.0"
authors = ["Thomas Timmer <thomas.timmer@bettyblocks.com>"]
edition = "2018"
description = "Yet another BigInt implementation"
repository = "https://github.com/thomas9911/big_int"
readme = "README.md"
license = "UNLICENSED"
keywords = []
categories = []

[dependencies]
rayon = {version="*", optional=true}